--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A monadic Result interface for handling errors",
   "main": "dist/index.js",
   "scripts": {
+    "build": "tsc",
     "lint": "eslint . --ext .ts",
     "lint-and-fix": "eslint . --ext .ts --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
