--- a/package.json
+++ b/package.json
@@ -5,16 +5,20 @@
   "main": "dist/monoflow.js",
   "scripts": {
     "build": "tsc",
-    "test": "npm run build && node dist/main.js",
+    "test": "jest",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix"
   },
   "author": "minamorl",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^27.0.1",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
     "eslint": "^7.32.0",
+    "jest": "^27.2.0",
+    "ts-jest": "^27.0.5",
+    "ts-node": "^10.2.1",
     "typescript": "^4.4.2"
   }
 }
